# Aether-Game-Engine

./: .gitea-issues.json  AUDIT_REPORT.md  CMakeLists.txt  ENGINE_CHANGES.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  REVIEW_REPORT.md  ROADMAP.md  TODO_LIST.md  multiplayer_main.cpp  my_game.cpp
.github/workflows/: wiki-sync.yml
assets/blocks/: default_blocks.json
docs/: AAA-ROADMAP.md  API-Audio.md  API-Core.md  API-Entity.md  API-Game.md  API-INDEX.md  API-Input.md  API-Math.md  API-Network.md  API-Physics.md  API-Platform.md  API-Render.md  API-Rendering.md  API-Resource.md  API-Scripting.md  API-UI.md  API-Ui.md  API-Voxel.md  CODY_TASKS.md  Developer-Lexicon.md  ENTITY_SYSTEM.md  IMPROVEMENT_PLAN.md  MULTIPLAYER_ARCHITECTURE.md  QUICKSTART.md  WIKI.md  voxel-engine-spec.md
docs/rag/: 01-overview.md  02-math-system.md  03-voxel-world.md  04-rendering-system.md  05-entity-component-system.md  06-physics-system.md  07-input-system.md  08-ui-system.md  09-audio-system.md  10-ai-system.md  11-networking.md  12-editor-tools.md  13-common-patterns.md  14-inventory-crafting.md  15-entity-archetypes.md  16-audio-events.md  17-chunk-system.md  18-network-system.md  19-editor-system.md  ACHIEVEMENTS.md  AUDIO_SYSTEM.md  BLOCK_DROPS.md  BLOCK_TEXTURES.md  CAVE_GENERATION.md  CHUNK_SYSTEM.md  CRAFTING_SYSTEM.md  CRAFTING_TABLE.md  CREATIVE_MODE.md  DAY_NIGHT_CYCLE.md  DEFERRED_RENDERING.md  ENGINE_STATUS.md  FALL_DAMAGE.md  FLORA_GENERATION.md  GAME_MODES.md  GRAPHICS_SETTINGS.md  HUD_SYSTEM.md  INPUT_SYSTEM.md  INVENTORY_PERSISTENCE.md  KEY_BINDINGS.md  LAVA_DAMAGE.md  (+31 more)
include/: aether_engine.h  voxel_engine.h
include/core/: types.h
include/game/: crafting_registry.hpp  dialog_tree.hpp  inventory.hpp  quest_manager.hpp
scripts/: build.sh  run.sh
src/: main.cpp  save_test.cpp  test_main.cpp  voxel_test.cpp  world_test.cpp
src/advanced/: feature_10.cpp  feature_10.h  feature_11.cpp  feature_11.h  feature_12.cpp  feature_12.h  feature_13.cpp  feature_13.h  feature_14.cpp  feature_14.h  feature_15.cpp  feature_15.h  feature_9.cpp  feature_9.h
src/ai/: ai_system.cpp  ai_system.h  behavior_tree.cpp  behavior_tree.h  enemy_ai.cpp  enemy_ai.h  enemy_spawner.cpp  enemy_spawner.h  entity_ai.cpp  entity_ai.h  entity_spawn_system.h  entity_spawner.cpp  entity_spawner.h  mob_ai.cpp  mob_ai.h  mob_spawner.cpp  mob_spawner.h
src/animation/: animation.cpp  animation.h  animation_state_machine.cpp  animation_state_machine.h
src/audio/: audio_engine.cpp  audio_engine.h  audio_events.cpp  audio_events.h  audio_system.cpp  audio_system.h  music_player.cpp  music_player.h  sound.cpp  sound.h  sound_manager.cpp  sound_manager.h
src/core/: achievements.cpp  achievements.h  application.cpp  application.h  asset_base.h  asset_importer.cpp  asset_importer.h  asset_manager.cpp  asset_manager.h  config.cpp  config.h  crafting.cpp  crafting.h  crafting_inventory_bridge.cpp  crafting_inventory_bridge.h  engine.cpp  engine.h  entity.cpp  entity.h  event_system.h  inventory.cpp  inventory.h  item_system.cpp  item_system.h  job_system.cpp  job_system.h  json.hpp  logger.cpp  logger.h  math.cpp  math.h  memory.cpp  memory.h  player_controller.cpp  player_controller.h  profiler.cpp  profiler.h  raycast.cpp  raycast.h  resource_pack.cpp  (+29 more)
src/debug/: debug_renderer.cpp  debug_renderer.h  debug_system.cpp  debug_system.h
src/editor/: asset_browser.cpp  asset_browser.h  entity_spawner.cpp  entity_spawner.h  in_game_editor.cpp  in_game_editor.h  scene_viewport.cpp  scene_viewport.h
src/entity/: component.cpp  component.h  components.cpp  components.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  system.cpp  system.h
src/game/: application.cpp  application.h  bed_system.cpp  bed_system.h  block_drops.cpp  block_drops.h  block_interaction.cpp  block_interaction.h  combat_system.cpp  combat_system.h  crafting_registry.cpp  crafting_system.cpp  crafting_system.h  creative_mode.cpp  creative_mode.h  day_night_cycle.cpp  day_night_cycle.h  dialog_tree.cpp  fall_damage.cpp  fall_damage.h  furnace_system.cpp  furnace_system.h  game_state.cpp  game_state.h  inventory.cpp  inventory_persistence.cpp  inventory_persistence.h  lava_damage.cpp  lava_damage.h  mob_spawn_rules.cpp  mob_system.cpp  mob_system.h  npc_dialog.cpp  npc_dialog.h  player_data.cpp  player_data.h  player_stats.cpp  player_stats.h  quest_manager.cpp  quest_system.cpp  (+13 more)
src/input/: input_manager.cpp  input_manager.h  key_bindings.cpp  key_bindings.h
src/math/: mat4.cpp  mat4.h  noise.cpp  noise.h  vec2.h  vec3.cpp  vec3.h  vec4.h
src/network/: chat_system.cpp  chat_system.h  client.cpp  client.h  entity_replication.cpp  entity_replication.h  game_client.cpp  game_client.h  game_network_protocol.h  game_server.cpp  game_server.h  lan_discovery.cpp  lan_discovery.h  multiplayer_game.cpp  multiplayer_game.h  network_architecture.cpp  network_architecture.h  network_manager.cpp  network_manager.h  network_serialization.h  networked_game_mode.cpp  networked_game_mode.h  packet.cpp  packet.h  player_skin.cpp  player_skin.h  server_authority.cpp  server_authority.h
src/physics/: aabb.cpp  aabb.h  collider.cpp  collider.h  collision.cpp  collision.h  physics_constraints.cpp  physics_constraints.h  physics_system.cpp  physics_system.h  physics_world.cpp  physics_world.h  ray.cpp  ray.h  rigidbody.cpp  rigidbody.h
src/platform/: file_system.cpp  file_system.h  gamepad.cpp  gamepad.h  input.cpp  input.h  input_manager.cpp  input_manager.h  platform_common.cpp  platform_common.h  threading.cpp  threading.h  timer.cpp  timer.h  window.cpp  window.h
src/render/: camera.cpp  camera.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
tests/: CMakeLists.txt  test_console_commands.cpp  test_culling.cpp  test_day_night.cpp  test_editor.cpp  test_editor.h  test_gamepad.cpp  test_gamepad_standalone.cpp  test_inventory_system.cpp  test_main.cpp  test_object_pool.cpp  test_occlusion_culling.cpp  test_renderer_integration.cpp  test_sandbox_mode.cpp  test_weather_system.cpp
wiki/: Home.md
(+134 files in other folders)
